# openlp-OSC-control

./: .gitignore  LICENSE  README.md  openlp-OSC-control.py  pyproject.toml
OpenLPRestAPI/: __init__.py
src/: _version.py  openLPOSCControl.py
src/OpenLPOSCControl/: __init__.py  __main__.py  openLPOSCControl.py
src/OpenLPOSCControl/OpenLPRestAPI/: __init__.py
src/OpenLPRestAPI/: __init__.py
